# cad_test

./: .gitignore  CMakeLists.txt
3DLibrary/: CMakeLists.txt
3DLibrary/include/: Circle.hpp  Curve.hpp  Ellipse.hpp  Helix.hpp
3DLibrary/src/: Circle.cpp  Ellipse.cpp  Helix.cpp
CMake/: Find3DLibrary.cmake
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
